finalized oracle JDK installation and Lucee leveraging the SDK